--- a/aMusic/Base.lproj/Main.storyboard
+++ b/aMusic/Base.lproj/Main.storyboard
@@ -83,6 +83,36 @@
             </objects>
             <point key="canvasLocation" x="121.73913043478262" y="105.80357142857143"/>
         </scene>
+        <!--Player View Controller-->
+        <scene sceneID="0Yl-Ym-har">
+            <objects>
+                <viewController storyboardIdentifier="player" id="4aC-fK-Ver" customClass="PlayerViewController" customModule="aMusic" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0X3-t1-Drq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hF6-3O-ylr">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QWe-Ov-EGi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hF6-3O-ylr" firstAttribute="leading" secondItem="QWe-Ov-EGi" secondAttribute="leading" id="8QF-Nf-rVS"/>
+                            <constraint firstItem="QWe-Ov-EGi" firstAttribute="bottom" secondItem="hF6-3O-ylr" secondAttribute="bottom" id="Npt-5A-QFd"/>
+                            <constraint firstItem="QWe-Ov-EGi" firstAttribute="trailing" secondItem="hF6-3O-ylr" secondAttribute="trailing" id="WRB-4u-2tK"/>
+                            <constraint firstItem="hF6-3O-ylr" firstAttribute="top" secondItem="QWe-Ov-EGi" secondAttribute="top" id="wQg-Xh-j9o"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="holder" destination="hF6-3O-ylr" id="XwR-ht-dqS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mPi-sZ-YaJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1919" y="106"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
